--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^3.1.0",
     "terser-webpack-plugin": "^2.3.8",
+    "copy-webpack-plugin": "^4.0.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2",
