--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "nodemon": "^2.0.12",
     "socket.io": "^4.1.3",
     "unique-names-generator": "^4.6.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0"
   }
 }
