--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An implementation of the regicide game",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "dev" : "nodemon server.js | pino-pretty -c -t"
   },
   "author": "Daniele Simonetti",
   "license": "ISC",
@@ -12,8 +13,10 @@
     "express": "^4.17.1",
     "knuth-shuffle": "^1.0.8",
     "nodemon": "^2.0.12",
+    "pino": "^6.13.0",
     "socket.io": "^4.1.3",
-    "unique-names-generator": "^4.6.0"
+    "unique-names-generator": "^4.6.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^7.32.0"
