--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "dev" : "nodemon server.js | pino-pretty -c -t"
+    "dev": "nodemon server.js | pino-pretty -c -t"
   },
   "author": "Daniele Simonetti",
   "license": "ISC",
@@ -13,10 +13,9 @@
     "express": "^4.17.1",
     "knuth-shuffle": "^1.0.8",
     "nodemon": "^2.0.12",
-    "pino": "^6.13.0",
-    "socket.io": "^4.1.3",
-    "unique-names-generator": "^4.6.0",
-    "winston": "^3.3.3"
+    "pino": "^6.13.1",
+    "socket.io": "^4.2.0",
+    "unique-names-generator": "^4.6.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0"
