--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "phaser": "^3.55.2",
+    "phaser3-rex-plugins": "^1.1.61",
     "socket.io-client": "^4.1.3"
   }
 }
